# pks_project

./: .gitignore  CMakeLists.txt  README.md
include/public/: api.h  types.h
src/: main.cpp
src/generator/: HTMLGenerator.cpp  HTMLGenerator.h  IOutputGenerator.h
src/parser/: CodeParser.cpp  CodeParser.h  Token.cpp  Token.h
src/scanner/: FileScanner.cpp  FileScanner.h
src/utils/: ConfigManager.cpp  ConfigManager.h  Logger.h
tests/: CMakeLists.txt  test_config.cpp  test_logger.cpp  test_parser.cpp  test_scanner.cpp
tests/scenarios/: CMakeLists.txt  scenario_basic_generation.cpp  scenario_include_guard.cpp  scenario_memory_leak_test.cpp
